# groundwater_ijmuiden

./: README.md  pyproject.toml
figures/: grondwaterstanden.py  hydrochemistry.py  maps.py  relatie_cl_EC.py  tables_hydrochemistry.py  thickness_claylayer.py
groundwater_ijmuiden/: __init__.py  diver_processing.py  helper_functions.py  readers.py  visualisations.py
preprocessing/: convert_handmetingen.py  convert_to_input.py  correct_depth_boorgatmeting.py  figures_maps.py  hydrochemistry.py  make_tables.py  rename_move_diverdata.py
processing/: figuren_rapport.py  helper_functions.py  plot_boorgatmeting.py  process_diver_data.py
runfiles/: process_diver_data.py  rename.py
