[project]
dependencies = []
description = "Add a short description here"
name = "groundwater_ijmuiden"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
groundwater_ijmuiden = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
chardet = ">=5.2.0,<6"
seaborn = ">=0.13.2,<0.14"
pandas = ">=2.2.3,<3"
mendeleev = ">=0.16.2,<0.17"
openpyxl = ">=3.1.5,<4"
geopandas = ">=1.0.1,<2"
shapely = ">=2.0.6,<3"
